--- a/src/components/molecules/Button/classes.module.scss
+++ b/src/components/molecules/Button/classes.module.scss
@@ -1,4 +1,4 @@
-@import 'styles/variables';
+@import "styles/variables";
 
 .btn {
   display: grid;
@@ -58,7 +58,7 @@
 
 .text {
   border-radius: 0;
-  padding: 4px 0;
+  padding: 10px;
   align-items: left;
 
   &:hover,
